location ie8 fix3

--- a/css/magokbd_ie8.css
+++ b/css/magokbd_ie8.css
@@ -25,6 +25,11 @@ body {
 	font-family: "Playfair Display", "Times New Roman", serif;
 }
 
+#testMap {
+	width:680px;
+	height:400px;
+}
+
 /* HEADER */
 
 header {
